<resources>
    <string name="app_name">Rhythm Lounge</string>
    <string name="logout">Logout</string>
    <string name="username_should_appear_here">username should appear here…</string>
    <string name="of_following_here"># of Following here…</string>
    <string name="of_followers_here"># of Followers here…</string>
    <string name="followers">Followers</string>
    <string name="email_should_appear_here">email should appear here…</string>
    <string name="following">Following</string>
    <string name="MAPS_API_KEY">AIzaSyCxvRTXiwy3Kfo52itjYI-xRJ8Ju477Axc</string>
    <string name="events">Events</string>
    <string name="friends">Friends</string>
    <string name="mycurrentlocation">My Location</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="collection_users">users</string>
    <string name="starred_events_concerts">Starred Events/Concerts</string>
    <string name="my_concerts">My Concerts</string>
    <string name="my_events">My Events</string>
    <string name="discover_events_concerts">Discover Events/Concerts</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="upcoming_concerts">Upcoming Concerts</string>
    <string name="concerts">Concerts</string>
    <string name="rhythm_lounge">Rhythm Lounge</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="playlists">Playlists</string>
    <string name="hosting_events">Hosting Events</string>
    <string name="attending_events">Attending Events</string>
    <string name="follow_unfollow">Follow/Unfollow</string>
    <string name="username">Username</string>
    <string name="go_to_login">Go to Login</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="x">x</string>
    <string name="edit">Edit</string>
    <string name="search_for_users">Search for Users</string>
    <string name="user_profile_image">User profile image</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create_event">Create Event</string>
    <string name="profile">Profile</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_email">Edit Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="create_new_posts">Create New Posts</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="user_profile_picture">Uer profile picture</string>
    <string name="thumbnail_image">Thumbnail image</string>
    <string name="delete_post">Delete Post</string>
    <string name="post_image">Post image</string>
    <string name="profile_picture">Profile picture</string>
    <string name="like_button">like button</string>
    <string name="date">Date</string>
    <string name="_0">0</string>
    <string name="like_icon">like icon</string>
    <string name="enter_email">TODO</string>
    <string name="enter_email1">Enter Email</string>
    <string name="confirm_account_deletion">Confirm Account Deletion</string>
    <string name="enter_password">Enter Password</string>
    <string name="post_comment">Comment</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="write_your_comment_here">Write your comment here...</string>
    <string name="delete_comment">Delete comment</string>
    <string name="write_your_post_here">Write your post here...</string>
    <string name="post_title">Post Title</string>
    <string name="upload_image">Upload Image</string>
    <string name="post">Post</string>
    <string name="search_for_events">Search for Events</string>
    <string name="venue">Venue</string>
    <string name="enter_venue">Enter Venue</string>
    <string name="description">Description</string>
    <string name="event_name">Event Name</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="is_this_a_concert">Is this a concert?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="state_territory">State/Territory</string>
    <string name="enter_event_description">Enter Event Description</string>
    <string name="outside_event_link">Outside Event Link</string>
    <string name="enter_outside_link">Enter Outside Link</string>
    <string name="click_to_select_a_date">Click to Select a Date</string>
    <string name="select_date">Select Date</string>
    <string name="click_to_select_a_time">Click to Select a Time</string>
    <string name="time">Time</string>
    <string name="testtext">testtext</string>
    <string name="user_bio_goes_here">User bio goes here.</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="no_information_given">No information given.</string>
    <string name="event_details">Event Details</string>
    <string name="rsvp_to_this_event">RSVP to this event</string>
    <string name="users_attending">Users Attending:</string>
    <string name="viewpost">viewPost</string>
    <string name="no_posts_available">No posts available!</string>
    <string name="image_preview">Image Preview</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="change_account_email">Change Account Email</string>
    <string name="change_account_password">Change Account Password</string>
    <string name="_0h_ago">0h ago</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="rsvp">RSVP</string>
    <string name="delete">Delete</string>
    <string name="refresh_posts">refresh posts</string>
    <string name="sort_by">Sort by:</string>

    <string-array name="heatmaps_datasets_array">
        <item>@string/mycurrentlocation</item>
        <item>@string/events</item>
        <item>@string/friends</item>
    </string-array>

    <string-array name="heatmaps_array">
        <item>My Location</item>
        <item>All Events</item>
        <item>My Following</item>
    </string-array>
</resources>