<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/defaulteventpicture"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/eventNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/venueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue" />

        <TextView
            android:id="@+id/eventLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <TextView
            android:id="@+id/eventDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/eventTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

    </LinearLayout>
</LinearLayout>