<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">



        <Button
            android:id="@+id/buttonUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="onUploadImageClick"
            android:text="@string/upload_image"
            android:textColor="#3E2723"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUploadedImage" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewUploadedImage"
            android:layout_width="165dp"
            android:layout_height="140dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/concert"
            app:layout_constraintBottom_toTopOf="@+id/buttonUploadImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonUploadImage">

            <TextView
                android:id="@+id/textViewEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:text="@string/event_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_event_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:textColorHint="#8D6E63"
                tools:ignore="Autofill" />

            <Switch
                android:id="@+id/switchIsConcert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/is_this_a_concert"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:textOff="@string/no"
                android:textOn="@string/yes"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textViewEnterLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:text="@string/location"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="#8D6E63"
                android:textAppearance="@style/TextAppearance.Manrope"
                tools:ignore="Autofill,TextFields" />

            <AutoCompleteTextView
                android:id="@+id/editTextState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/state_territory"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="#8D6E63"
                android:textAppearance="@style/TextAppearance.Manrope" />


            <TextView
                android:id="@+id/textViewEnterVenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/venue"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_venue"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="#8D6E63"
                android:textAppearance="@style/TextAppearance.Manrope"
                tools:ignore="TextFields" />


            <TextView
                android:id="@+id/textViewEnterDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_event_description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:textColorHint="#8D6E63"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textViewEnterOutsideLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/outside_event_link"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextOutsideLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_outside_link"
                android:inputType="textUri"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:textColorHint="#8D6E63"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textViewEnterDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/click_to_select_a_date"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="#8D6E63"
                tools:ignore="Autofill,TextFields" />


            <TextView
                android:id="@+id/textViewEnterTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:text="@string/click_to_select_a_time"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:hint="@string/time"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEnterTime"
                tools:ignore="Autofill,TextFields" />

            <Button
                android:id="@+id/buttonCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.Manrope"
                android:onClick="onClick"
                android:gravity="center_horizontal"
                android:text="@string/create_event"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>





