<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/defaultprofilepicture"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/edit_profile_pic"
            android:hint="@string/edit_username"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUsername"
            android:layout_toEndOf="@+id/edit_profile_pic"
            android:hint="@string/edit_email"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="TextFields,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/buttonSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_profile_pic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/save_changes"
            android:textColor="#3E2723" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="78dp"
            android:layout_height="48dp"
            android:layout_below="@+id/edit_profile_pic"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            android:onClick="onEditClicked"
            android:text="@string/edit"
            android:textColor="#3E2723" />
    </RelativeLayout>
</FrameLayout>


