<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewRhythmLounge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rhythm_lounge"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Manrope"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageViewSettings"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:padding="4dp"
        android:src="@drawable/gear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/textViewRhythmLounge"
        app:layout_constraintVertical_bias="0.578"
        tools:layout_editor_absoluteX="-16dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        tools:ignore="VisualLintBottomNav"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_create_post"
        style="@style/CustomFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/viewpost"
        android:padding="0dp"
        android:paddingEnd="16dp"
        android:src="@drawable/viewpost"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentContainer"
        app:menu="@menu/bottom_navigation_menu"
        app:tint="@null"
        tools:ignore="RtlSymmetry,VisualLintBottomNav,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
